# Pantheon

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.ai/: codex_task_articles_hub_dates.md  codex_task_expansion_50c_astro.md  codex_task_expansion_50c_fortune.md  codex_task_expansion_50c_mbti.md  codex_task_expansion_50d_astro.md  codex_task_expansion_50d_fortune.md  codex_task_expansion_50d_integrate_latest.md  codex_task_expansion_50d_mbti.md  codex_task_expansion_50d_repair_mbti_banned_phrase.md  codex_task_expansion_50d_repair_mbti_evidence_metric.md  codex_task_expansion_50d_repair_mbti_public_language.md  codex_task_expansion_50d_review_astro.md  codex_task_expansion_50d_review_fortune.md  codex_task_expansion_50d_review_mbti.md  ownership_expansion_50d.md
.githooks/: pre-push
TASK-001/: brief.md  context_manifest.md  result.md  status.md
TASK-002/: brief.md  context_manifest.md  result.md  status.md
TASK-003/: brief.md
TASK-004/: brief.md
TASK-005/: brief.md
app/: __init__.py
app/ai/: agent.py  (+4 more)
docs/: agent_operating_model.md  attribution.md  competitor_seo_tool.md  gsc_daily_pipeline.md  gsc_index_anomaly_runbook.md  life_chart_engine_intake.md  mbti_tarot_hd_fusion_strategy.md  pantheon_article_publication_standard.md  pantheon_content_transport_decoupling.md  pantheon_deployment_workflow.md  pantheon_gemini_outbox_runner.md  pantheon_gemini_reviewer_transport_strategy.md  pantheon_gemini_reviewer_v4_architecture.md  pantheon_gemini_v4_agy_cli_compatibility.md  report_syntax.md  (+3 more)
(+2187 files in other folders)
