[project]
name = "mystic-engine"
version = "0.3.5"
description = "Pure Python FastAPI backend for modular divination calculators and AI interpretation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "lunar-python>=1.4.8",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
